--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "graphql": "^16.6.0",
     "graphql-ws": "^5.12.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.2",
