--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "graphql-ws": "^5.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "react-virtuoso": "^4.1.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@graphql-codegen/cli": "^3.2.2",
     "@graphql-codegen/client-preset": "^2.1.1",
     "@graphql-codegen/introspection": "3.0.1",
